--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -6,13 +6,22 @@ body {
 }
 
 p {
-    color: #ffffff;
+    color: white;
 }
 
-a {
-    list-style: none;
-    text-decoration: none;
+img {
+  max-width: 100%;
 }
+
+ul > li {
+  list-style: none;
+}
+
+ul a {
+  list-style: none;
+  text-decoration: none;
+}
+
 
 h1, h2, h3, h4, p,summary {
     color: #ffffff;
