--- a/scss/_game-information.scss
+++ b/scss/_game-information.scss
@@ -1,8 +1,25 @@
 .game-information {
+    position: relative;
+    margin-left: 37px;
     padding-bottom: 113%;
     width: 11%;
     height: 15%;
 }
+
+.big-heading {
+  padding-bottom: 40px;
+  margin-left: 13px;
+  border-block-end: 1px solid;
+}
+
+.title-of-games {
+  margin-left: 14px;
+}
+
+.more-explanation {
+  margin-left: 36px;
+  margin-right: 14px;
+} 
 
 .slide-image {
     position: relative;
@@ -12,7 +29,8 @@
 .first-img {
     position: absolute;
     z-index: 3;
-    // overflow: hidden;
+    width: 225px;
+    height: 273px;
   }
 
 .scd-img {
