--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,7 @@
 @import"default";
+@import"variables";
 @import"masthead";
 @import"buttons";
 @import"game-information";
-@import"variables";
+@import"features";
+
