--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -5,9 +5,15 @@ body {
   background-color: #110202; }
 
 p {
-  color: #ffffff; }
+  color: white; }
 
-a {
+img {
+  max-width: 100%; }
+
+ul > li {
+  list-style: none; }
+
+ul a {
   list-style: none;
   text-decoration: none; }
 
@@ -78,9 +84,23 @@ button a {
   font-size: bold; }
 
 .game-information {
+  position: relative;
+  margin-left: 37px;
   padding-bottom: 113%;
   width: 11%;
   height: 15%; }
+
+.big-heading {
+  padding-bottom: 40px;
+  margin-left: 13px;
+  border-block-end: 1px solid; }
+
+.title-of-games {
+  margin-left: 14px; }
+
+.more-explanation {
+  margin-left: 36px;
+  margin-right: 14px; }
 
 .slide-image {
   position: relative;
@@ -88,7 +108,9 @@ button a {
 
 .first-img {
   position: absolute;
-  z-index: 3; }
+  z-index: 3;
+  width: 225px;
+  height: 273px; }
 
 .scd-img {
   position: absolute;
@@ -101,3 +123,26 @@ button a {
   z-index: 1;
   top: 1rem;
   left: 1rem; }
+
+.features {
+  background-image: url(../images/bg-image-3.svg);
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: calc(100vw * 418 / 637);
+  background-size: cover; }
+
+.features {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-bottom: 70px; }
+
+.features-detail {
+  margin-right: 24px; }
+
+.features-heading {
+  margin-right: 20px; }
+
+summary {
+  color: #ffB548;
+  text-transform: uppercase; }
