--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top: 227px;
+    // padding-top: 227px;
 }
 
 button {
