--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -2,7 +2,7 @@ body {
     font-family: "open sans";
     font-size: 16px;
     margin: auto;
-    background-color: rgb(17, 2, 2);
+    background:  #080A0B ;
 }
 
 p {
