removed the background shadow

--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -1,7 +1,5 @@
 .features {
-  background-image: url(../images/bg-image-3.svg),
-                    url(../images/bg-image-3-shadow.png);
-                    z-index: -1;
+  background-image: url(../images/bg-image-3.svg);
   background-repeat: no-repeat;
   width: 100vw;
   height: calc(100vw * 418 / 637);
