removed background shadow

--- a/scss/_graphics.scss
+++ b/scss/_graphics.scss
@@ -1,6 +1,6 @@
 .graphics {
-    background-image: url(../images/sos-house.png);
-    // url(../images/image-shadow-of-table.png);
+    background-image: url(../images/sos-house.png),
+                   url(../images/image-shadow-of-table.png);
     background-repeat: no-repeat;
     left: 100;
     bottom: 0;
