--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -13,16 +13,17 @@ img {
   max-width: 100%;
 }
 
-ul > li {
-  list-style: none;
-}
+ul {
 
-ul a {
-  list-style: none;
-  text-decoration: none;
+  li {
+    list-style: none;
+}
+  a {
+    text-decoration: none;
+}
 }
 
 
 h1, h2, h3, h4, p,summary {
-    color: #ffffff;
+    color: white;
 }
