--- a/scss/_site-quotes.scss
+++ b/scss/_site-quotes.scss
@@ -1,6 +1,17 @@
 .site-testimonial {
     background:  #080A0B 99.74%;
   }
+
+.site-testimonial-headings {
+  margin-left: 15px;
+}h1 {
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: 16px;
+}h2 {
+  text-transform: uppercase;
+  font-size: 20px;
+}
   
   .container {
     background: rgba(255, 255, 255, 0.08);
@@ -11,6 +22,7 @@
     background-repeat: no-repeat;
     left: 0%;
     top: 100%;
+    
   }
   
 
@@ -23,7 +35,7 @@
       .date {
        color: $site-quotes-color;
   }
-    p,
+    .users-quote,
     .date {
       margin-left: 16px;
     }
@@ -35,4 +47,27 @@ ul {
   .user-job {
     margin-left: 75px;
   }
+}
+
+.first-user {
+  background-image: url(../images/first-user-1.svg);
+  background-repeat: no-repeat;
+  padding-left: 16px;
+  padding-top: 10px;
+}
+
+
+.scd-user {
+  background-image: url(../images/second-user.svg);
+  background-repeat: no-repeat;
+  padding-left: 16px;
+  padding-top: 10px;
+}
+
+
+.third-user {
+  background-image: url(../images/third-user.svg);
+  background-repeat: no-repeat;
+  padding-left: 16px;
+  padding-top: 10px;
 }
