--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,11 +1,71 @@
+footer > nav {
+    padding-top: 62px;    
+}
+
+.link-header {
+    top: -30px;
+    left: 88px;
+    position: relative;
+    
+}ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .homepage-site {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     text-transform: uppercase;
+    padding-left: 0;
+    margin-left: 23px;
+    margin-right: 26px;
+    font-size: 12px;
+    padding-top: 21px;
+    margin-top: 0;
+    margin-bottom: 0;
+} 
+
+ul > li > a {
     color: white;
 }
 
-.share span {
+
+ span {
     visibility: hidden;
+}
+
+.share {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 45px;
+    padding-bottom: 28px;
+    margin: 0;
+}
+
+.service {
+    border-block-start: solid .25px grey;
+    padding-bottom: 13px;
+    margin-bottom: 0;
+    margin-left: 15px;
+
+}p {
+    color: grey;
+    padding-left: 0;
+    font-size: 12px;
+    padding-top: 20px;
+}
+
+.outpost {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-between;
+    padding-bottom: 62px;
+    text-transform: uppercase;
+    font-size: 12px;
+    padding-left: 0;
+}li {
+    padding-top: 10px;
 }
