--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,9 +7,6 @@ footer > nav {
     left: 88px;
     position: relative;
     
-}ul {
-    margin-top: 0;
-    margin-bottom: 0;
 }
 
 .homepage-site {
@@ -50,7 +47,7 @@ ul > li > a {
     margin-bottom: 0;
     margin-left: 15px;
 
-}p {
+}.service p {
     color: grey;
     padding-left: 0;
     font-size: 12px;
@@ -66,6 +63,4 @@ ul > li > a {
     text-transform: uppercase;
     font-size: 12px;
     padding-left: 0;
-}li {
-    padding-top: 10px;
 }
