--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -1,3 +1,6 @@
+html {
+  box-sizing: border-box; }
+
 body {
   font-family: "open sans";
   font-size: 16px;
@@ -20,13 +23,12 @@ h1, h2, h3, h4, p, summary {
   color: white; }
 
 .masthead {
-  background-image: url("../images/angelina-andreas-jungleruins 1.svg");
+  background-image: url("../images/bg-image-masthead.svg");
   background-repeat: no-repeat;
-  width: 320px;
-  height: 650px;
-  min-width: 100%;
+  width: 100vw;
+  height: calc(100vw * 960 / 1440);
   background-size: cover;
-  padding-bottom: 30px; }
+  padding-bottom: 300px; }
 
 .lang {
   position: absolute;
@@ -56,7 +58,7 @@ h1, h2, h3, h4, p, summary {
   text-transform: uppercase; }
 
 .main-heading {
-  padding-top: 30%; }
+  padding-top: 179px; }
 
 .choices {
   background-image: url(../images/scroll-down.svg);
@@ -68,8 +70,14 @@ h1, h2, h3, h4, p, summary {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  padding-bottom: 30px; }
+  align-items: center; }
+
+.buying-btn {
+  padding-bottom: 256px;
+  padding-top: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
 
 button {
   width: 200px;
