--- a/scss/_graphics.scss
+++ b/scss/_graphics.scss
@@ -17,28 +17,23 @@
 
 
 .table {
-    table-layout: auto;
-    width: 100%;
-    margin: 20px auto;
-  }
-  
-  table {
-      table-layout: fixed;
-      color: white;
-      margin-left: 10px;
-  }
-  
-  table tr th {
-    border-collapse: collapse;
-    margin: 0;
-  }
+  display: grid;
+  color: white;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1rem;
+  border: 1px solid ;
+} dt {
+  color: $site-heading-color;
+}
 
-  .table-headings {
-    color: #ffB548;
+@media(min-width: 1114px) {
+  .graphics-heading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  } h1 {
+    font-size: 24px;
+  } h2 {
+    font-size: 50px;
   }
-  
-  tr th {
-    border: 1px solid;
-    padding: 10px;
-  }
-
+}
