--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,10 +1,9 @@
 .masthead {
     background-image: url("../images/bg-image-masthead.svg");
     background-repeat: no-repeat;
-    width: 100vw;
-    height: calc(100vw * 960 / 1440);
+    background-position: 30%;
     background-size: cover;
-    padding-bottom: 300px;
+
 }
 
 .lang {
@@ -40,9 +39,6 @@
     text-transform: uppercase;
 }
 
-.main-heading {
-    padding-top: 179px;
-}
 
 .choices {
     background-image: url(../images/scroll-down.svg);
@@ -51,3 +47,23 @@
     padding-bottom: 43px;
 }
 
+.navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+}
+
+@media (min-width: 1114px) {
+    .logo  {
+        background-repeat: no-repeat;
+        margin-left: 120px;
+        width: 55px;
+        padding-top: 10px;
+    } .start-play {
+        font-size: 80px;
+    } .experience-new-game {
+        font-size: 24px;
+    }.main-heading {
+        padding-top: 534px;
+    }
+}
