--- a/scss/_graphics.scss
+++ b/scss/_graphics.scss
@@ -13,6 +13,7 @@
 } .graphics h2 {
   font-size: 20px;
   text-align: center;
+  padding-bottom: 60px;
 }
 
 
@@ -21,7 +22,6 @@
   color: white;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
-  border: 1px solid ;
 } dt {
   color: $site-heading-color;
 }
@@ -36,4 +36,20 @@
   } h2 {
     font-size: 50px;
   }
+}
+
+.row {
+  border: 1px solid white;
+  border-inline-end: 10px;
+  margin-block-start: -17px;
+  padding-left: 9px;
+}
+
+.row:nth-of-type(1) {
+    margin-inline-end: -17px;
+}
+
+
+.row:nth-of-type(5) {
+  grid-column: 1 / 3;
 }
