--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -1,16 +1,9 @@
 .features {
   background-image: url(../images/bg-image-3.svg);
   background-repeat: no-repeat;
-  width: 100vw;
-  height: calc(100vw * 418 / 637);
   background-size: cover;
-}
-
-.features {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  padding-bottom: 70px;
+  padding-bottom: 85px;
+  padding-left: 40%;
 }
 
 .features-detail {
@@ -19,11 +12,24 @@
 
 .features-heading {
   margin-right: 20px;
+  margin-left: 116px;
 }
 
 summary {
   color: #ffB548;
   text-transform: uppercase;
+}
+
+.features-heading h3 {
+  text-transform: uppercase;
+  font-size: 18px;
+  margin-bottom: 0;
+}
+
+.features-heading h4 {
+  text-transform: uppercase;
+  font-size: 33px;
+  margin-top: 0;
 }
 
 @media(min-width: 1114px) {
@@ -42,3 +48,28 @@ summary {
     margin-left: 842px;
   }
 }
+
+.features-detail details {
+  position: relative;
+  padding-left: 20px;
+}
+
+.features-detail summary::before {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid white;
+  box-sizing: border-box;
+}
+
+
+.features-detail details[open] summary::before {
+   background-color: white;
+}
+
+
