--- a/scss/_game-information.scss
+++ b/scss/_game-information.scss
@@ -1,60 +1,82 @@
 .game-information {
-    position: relative;
-    margin-left: 37px;
-    padding-bottom: 113%;
-    width: 11%;
-    height: 15%;
+  position: relative;
+  margin-left: 37px;
+  padding-bottom: 113%;
 }
 
 .big-heading {
-  padding-bottom: 40px;
-  margin-left: 13px;
-  border-block-end: 1px solid;
+padding-bottom: 40px;
+margin-left: 13px;
+border-block-end: 1px solid;
 }
 
 .title-of-games {
-  margin-left: 14px;
+margin-left: 14px;
 }
 
 .more-explanation {
-  margin-left: 36px;
-  margin-right: 14px;
+margin-left: 36px;
+margin-right: 14px;
 } 
 
-.slide-image {
-    position: relative;
-    padding: 0;
+@media(min-width: 1114px) {
+  .title-of-games {
+    font-size: 24px;
+    margin-left: 120px;
+  }.big-heading {
+    font-size: 50px;
+    margin-left: 119px;
+  }.more-explanation {
+    margin-left: 307px;
+  }
 }
 
-.first-img {
-    position: absolute;
-    z-index: 3;
-    width: 225px;
-    height: 273px;
-  }
+.game-information {
+	padding-top: 120% 38px;
+	
+}
 
-.scd-img {
-    position: absolute;
-    z-index: 2;
-    left: .5rem;
-    top: .5rem;
-  }
+.image-slider {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	position: relative;
+ 	padding-bottom: calc(100% * 273 / 249); 
+}
+.image {
+	position: absolute;
+}
 
-.third-img {
-    position: absolute;
-    z-index: 1;
-    top: 1rem;
-    left: 1rem;
-  }
+.image:nth-of-type(1) {
+	top: 0;
+	transform-origin: 100% 0%;
+	z-index: 5;
+	padding-top: calc(100% * 24 / 249);
+	// left: calc(100% * 24 / 249);
+	right: 0;
+	transform: scale(calc((273 - 48) / 273));
+}
 
-  @media(min-width: 1114px) {
-    .title-of-games {
-      font-size: 24px;
-      margin-left: 120px;
-    }.big-heading {
-      font-size: 80px;
-      margin-left: 119px;
-    }.more-explanation {
-      margin-left: 307px;
-    }
-  }
+.image:nth-last-of-type(2) {
+	z-index: 2;
+	right: 0;
+	left: calc(100% * 24 / 249);
+	transform: scale(1);
+	padding-top: 0;
+}
+
+.image:nth-of-type(3) {
+	z-index: 3;
+	padding-top: calc(100% * 12 / 249);
+	left: calc(100% * 12 / 249);
+	right: calc(100% * 12 / 249);
+	transform: scale(calc((273 - 24) / 273));
+}
+
+img {
+	max-width: 100%;
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
