--- a/scss/_site-quotes.scss
+++ b/scss/_site-quotes.scss
@@ -1,5 +1,5 @@
 .site-testimonial {
-    background:  #080A0B 99.74%;
+    background:  #080A0B 99%;
   }
 
 .site-testimonial-headings {
@@ -8,6 +8,7 @@
   font-size: 16px;
   text-transform: uppercase;
   line-height: 16px;
+  padding-top: 35px;
 }h2 {
   text-transform: uppercase;
   font-size: 20px;
@@ -19,11 +20,54 @@
     margin-left: 15px;
     background-image: url(../images/twitter.png);
     background-repeat: no-repeat;
-    left: 0%;
-    top: 100%;
+    background-position: 85%;
+    background-position-y: 36%;
     max-width: 290px;
-    
+    width: 100%;
+    margin: auto;
+  } 
+.container li:first-child {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+  }.user-job:nth-of-type(2) {
+    padding-bottom: 9px;
+  }.container ul{
+    padding-left: 16px;
+    padding-top: 9px;
+    padding-bottom: 15px;
   }
+
+  .container .user-name {
+    text-transform: uppercase;
+    font-size: 16px;
+    color: $site-heading-color;
+}
+  .user-job,
+    .date {
+     color: $site-quotes-color;
+}
+  .users-quote,
+  .date {
+    margin-left: 16px;
+  }
+
+ul {
+    .user-name {
+    margin-left: 75px;
+  }
+.user-job {
+  margin-left: 75px;
+}
+}
+
+
+
+
+
+
+
+
 
   @media(min-width: 1114px) {
     .container {
@@ -35,48 +79,3 @@
     }
   }
 
- .container .user-name {
-      text-transform: uppercase;
-      font-size: 16px;
-      color: $site-heading-color;
-  }
-    .user-job,
-      .date {
-       color: $site-quotes-color;
-  }
-    .users-quote,
-    .date {
-      margin-left: 16px;
-    }
-  
-ul {
-      .user-name {
-      margin-left: 75px;
-    }
-  .user-job {
-    margin-left: 75px;
-  }
-}
-
-.first-user {
-  background-image: url(../images/first-user-1.svg);
-  background-repeat: no-repeat;
-  padding-left: 16px;
-  padding-top: 10px;
-}
-
-
-.scd-user {
-  background-image: url(../images/second-user.svg);
-  background-repeat: no-repeat;
-  padding-left: 16px;
-  padding-top: 10px;
-}
-
-
-.third-user {
-  background-image: url(../images/third-user.svg);
-  background-repeat: no-repeat;
-  padding-left: 16px;
-  padding-top: 10px;
-}
