ädded padding top

--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -10,6 +10,10 @@
     margin-right: 24px;
 }
 
+.features-detail li {
+  padding-bottom: 43px;
+}
+
 .features-heading {
   margin-right: 20px;
   margin-left: 116px;
