--- a/scss/_graphics.scss
+++ b/scss/_graphics.scss
@@ -1,52 +1,63 @@
 .graphics {
-    background-image: url(../images/house-sos.png);
-    background-repeat: no-repeat;
-    background-position: 90%;
-    background-size: cover;
-    padding-bottom: 235px;
+  background-image: url(../images/house-sos.png);
+  background-repeat: no-repeat;
+  background-position: 90%;
+  background-size: cover;
+  padding-bottom: 235px;
 } .graphics h1 {
-  font-size: 14px;
-  text-align: center;
+font-size: 14px;
+text-align: center;
 } .graphics h2 {
-  font-size: 20px;
-  text-align: center;
-  padding-bottom: 60px;
+font-size: 20px;
+text-align: center;
+padding-bottom: 60px;
 }
 
 
 .table {
+display: grid;
+color: white;
+grid-template-columns: repeat(2, 1fr);
+grid-gap: 1rem;
+} dt {
+color: $site-heading-color;
+}
+
+@media(min-width: 1114px) {
+.graphics-heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} h1 {
+  font-size: 24px;
+} h2 {
+  font-size: 50px;
+}.table {
   display: grid;
   color: white;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
+  max-width: 573px;
+  height: 400px;
+  padding-left: 120px;
 } dt {
   color: $site-heading-color;
 }
 
-@media(min-width: 1114px) {
-  .graphics-heading {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  } h1 {
-    font-size: 24px;
-  } h2 {
-    font-size: 50px;
-  }
 }
 
 .row {
-  border: 1px solid white;
-  border-inline-end: 10px;
-  margin-block-start: -17px;
-  padding-left: 9px;
+border: 1px solid white;
+border-inline-end: 10px;
+margin-block-start: -17px;
+padding-left: 9px;
 }
 
 .row:nth-of-type(1) {
-    margin-inline-end: -17px;
+  margin-inline-end: -17px;
 }
 
 
 .row:nth-of-type(5) {
-  grid-column: 1 / 3;
+grid-column: 1 / 3;
 }
