--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -30,6 +30,10 @@
     text-transform: uppercase;
 }
 
+.main-heading {
+    padding-top: 240px;
+}
+
 .experience-new-game {
     font-size: 18px;
     line-height: 18px;
